<resources>
    <string name="app_name">Story App</string>
    <string name="package_name">com.example.storyapp</string>
    <string name="input_email">Please input your email address</string>
    <string name="password_length">Password length must be six characters.</string>
    <string name="timeout_time">Timeout!!Please try later.r</string>
    <string name="the_user_created">This account was created successfully</string>
    <string name="error_message">Error message :</string>
    <string name="login_successfully">The user login is successfully</string>
    <string name="this_account_unauthorized">This account  is unauthorized</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="check_no">No</string>
    <string name="check_yes">Yes</string>
    <string name="choose_your_image_file">Select the file you want to upload.</string>
    <string name="from_gallery">From Your gallery</string>
    <string name="take_picture">Take a picture</string>
    <string name="cancel">Cancel</string>
    <string name="select_photo">Select Your Photo</string>
    <string name="error_loading">Failed to load your data :</string>
    <string name="detail_name">Detail Name</string>
    <string name="detail_desc">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, lorem ipsum dolor sit amet.Quis nostrud exercise ullamco laboris nisi ut aliquip ex ea commodo consequat ut enim ad minim veniam.Duis aute irure pity in understanding in voluptate velit esse cillum pity eu fugiat nulla pariaturExcept for the occasional cupidatat that does not occur, there is a responsibility on the part of the official whose work is laborious..</string>
    <string name="detail_date">01/10/2022</string>
    <string name="name_is_empty">Please input your name</string>
    <string name="email_is_empty">Please Input your  email</string>
    <string name="password_is_empty">Please input your password</string>
    <string name="input_desc">Please  input your description</string>
    <string name="choose_picture">Choose your picture</string>
    <string name="input_picture">Please input your image file</string>
    <string name="message">Your message :</string>
    <string name="post_as">Post as your Story</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="see_password">see password</string>
    <string name="no_account">Do you do not have Account?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="language">Language</string>
    <string name="check_logOut">Logout</string>
    <string name="tolls_password">123456</string>
    <string name="tolls_name">Muhammad Rizky</string>
    <string name="tolls_email">muhammadrizky102356@gmail.com</string>
    <string name="valid_email_address">Please input a valid email address</string>
    <string name="retry">Retry</string>
    <string name="location">location</string>
    <string name="icon_map_pin">location</string>
    <string name="pick_place">Pick Picker</string>
    <string name="click_on_map_to_pick_place">Click on map to pick place</string>
    <string name="use_current_location">Use current location</string>
    <string name="normal_maps">Normal Map</string>
    <string name="satelite_maps">Satellite Map</string>
    <string name="terrain_maps">Train Map</string>
    <string name="hybrid_maps">Hybrid Map</string>
    <string name="ups_something_went_wrong">Oops Somenthing  Went Wrong</string>
    <string name="no_location">No Location</string>
    <string name="location_name_unknown">Location Name Unknown</string>
    <string name="see_on_map">See the Map</string>
    <string name="upload">Upload</string>
    <string name="photo">photo</string>
    <string name="no_have_location_data">No Have Location Data</string>
    <string name="my_location_now">My Location Now</string>
    <string name="use_this_location_now">Use this loation noow</string>
    <string name="Style_parsing_failed">Style parsing failed</string>
    <string name="cant_find_style">Can\'t find style. Error:</string>
    <string name="facthed_map_successfully">Stories fetched successfully</string>
    <string name="map_location">Launch Map is  Active</string>
    <string name="detail_title">Detail Story</string>
    <string name="emaiil_is_already">This email is already</string>
    <string name="information">Your information</string>
    <string name="continue_">Continue</string>
    <string name="email_already">This email already exist</string>
    <string name="upload_successfully">Upload story was successfull</string>
</resources>