<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        tools:context=".ui.AddActivity">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="name" />


        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="13dp"
            android:adjustViewBounds="true"
            android:background="@drawable/boarder_line"
            android:src="@drawable/ic_camera_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <LinearLayout
            android:id="@+id/ll_add_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/ed_add_desc"
            app:layout_constraintTop_toBottomOf="@id/iv_item_photo"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/bt_add_location"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_pin_drop_24"
                android:contentDescription="@string/icon_map_pin"
                app:tint="@color/red" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@string/location"
                android:textSize="14sp" />

        </LinearLayout>


        <EditText
            android:id="@+id/ed_add_desc"
            android:layout_width="360dp"
            android:layout_height="160dp"
            android:layout_marginTop="10dp"
            android:autofillHints="Description"
            android:background="@drawable/boarder_line"
            android:gravity="top|left"
            android:hint="description"
            android:inputType="textMultiLine"
            android:maxWidth="360dp"
            android:maxHeight="180dp"
            android:maxLines="8"
            android:padding="15dp"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_add_location"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/upload"
            android:background="@drawable/button_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_add_desc" />

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            style="@style/LoadingProgressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>